--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Js</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <div>
+      <div class="" id="bohodir">Bohodir</div>
+      <div class="" id="xurshid">Xurshid</div>
+    </div>
+
+    <div class="message">
+      <div id="content"></div>
+    </div>
+    <div>
+      <form>
+        <input type="text" id="message" />
+        <button id="btn">Send Message</button>
+      </form>
+    </div>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
