--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <script src="./js/main.js"></script>
+    <h1>Bohodir</h1>
+
+    <!-- <script src="./js/main.js"></script> -->
+    <h1>Bohodir</h1>
+    <h1>Xurshid</h1>
+
+    <script src="./js/main.js">
+      // console.log('Hello World')
+    </script>
   </body>
 </html>
