--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <div class="ism">
+      <h1 id="name" class="name">Bohodir Rahmonov</h1>
+    </div>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
