--- a/index.html
+++ b/index.html
@@ -5,9 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="d-flex mt-5 gap-3">
+        <div class="w-25 border border-dark rounded p-5">
+          <form action="" id="form">
+            <div>
+              <label class="form-label">Text</label>
+              <input type="text" id="text" class="form-control mb-3" />
+            </div>
+
+            <button class="btn btn-primary">Jonatish</button>
+          </form>
+        </div>
+
+        <div class="w-75">
+          <div class="row" id="content">
+            <!-- <div class="col-4">
+              <div
+                class="p-3 bg-white text-dark border border-dark rounded shadow"
+              >
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Consequatur eius laborum nemo similique ex necessitatibus
+                  natus voluptatum atque quos repellat repudiandae iusto est
+                  dolorem deserunt, ab quae nam aliquam sequi?
+                </p>
+              </div>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
