--- a/index.html
+++ b/index.html
@@ -29,18 +29,7 @@
 
         <div class="w-75">
           <div class="row" id="content">
-            <!-- <div class="col-4">
-              <div
-                class="p-3 bg-white text-dark border border-dark rounded shadow"
-              >
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Consequatur eius laborum nemo similique ex necessitatibus
-                  natus voluptatum atque quos repellat repudiandae iusto est
-                  dolorem deserunt, ab quae nam aliquam sequi?
-                </p>
-              </div>
-            </div> -->
+            <div></div>
           </div>
         </div>
       </div>
