--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <div>
-      <div class="" id="bohodir">Bohodir</div>
-      <div class="" id="xurshid">Xurshid</div>
-    </div>
+    <div class="container">
+      <div class="carousel_container">
+        <div class="carousel_item">
+          <img src="https://picsum.photos/400/300" alt="" />
+        </div>
+        <div class="carousel_item">
+          <img src="https://picsum.photos/400/400" alt="" />
+        </div>
+        <div class="carousel_item">
+          <img src="https://picsum.photos/400/300" alt="" />
+        </div>
+      </div>
 
-    <div class="message">
-      <div id="content"></div>
-    </div>
-    <div>
-      <form>
-        <input type="text" id="message" />
-        <button id="btn">Send Message</button>
-      </form>
+      <div class="flex">
+        <button id="prev">Prev</button>
+        <button id="next">Next</button>
+      </div>
     </div>
 
     <script src="./js/main.js"></script>
