--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
               <input type="text" id="text" class="form-control mb-3" />
             </div>
 
-            <button class="btn btn-primary">Jonatish</button>
+            <button class="btn btn-primary" id="sendBtn">Jonatish</button>
           </form>
         </div>
 
         <div class="w-75">
-          <div class="row" id="content">
-            <div></div>
-          </div>
+          <div class="row" id="content"></div>
         </div>
       </div>
     </div>
