--- a/index.html
+++ b/index.html
@@ -111,11 +111,14 @@
           </select>
 
           <!-- <button class="btn btn-primary m-3">Qidirish</button> -->
-
-
+          <div>
+            <label for="" class="form-label">Pitsa</label>
+            <input id="checkbox"  class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+          </div>
+         
       </form>
 
-        <div  >
+        <div>
 
           <h2>Saqlangan filmlar</h2>
           <div id="saved_movie"> </div>
