--- a/index.html
+++ b/index.html
@@ -4,29 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Js</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="carousel_container">
-        <div class="carousel_item">
-          <img src="https://picsum.photos/400/300" alt="" />
-        </div>
-        <div class="carousel_item">
-          <img src="https://picsum.photos/400/400" alt="" />
-        </div>
-        <div class="carousel_item">
-          <img src="https://picsum.photos/400/300" alt="" />
-        </div>
-      </div>
-
-      <div class="flex">
-        <button id="prev">Prev</button>
-        <button id="next">Next</button>
-      </div>
-    </div>
-
     <script src="./js/main.js"></script>
   </body>
 </html>
