--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <ul id="content"></ul>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
