--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <ul id="content"></ul>
     </div>
 
+    <button type="button">Send</button>
+
     <script src="js/main.js"></script>
   </body>
 </html>
