--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <ul id="content"></ul>
     </div>
 
-    <button type="button">Send</button>
+    <button type="button" id="send">Send</button>
+    <button type="button" id="get">Get</button>
+    <button type="button" id="getAllBook">GetAllBook</button>
 
     <script src="js/main.js"></script>
   </body>
