--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <ul class="names">
+      <li>Bohodir</li>
+      <li>Sodiqjon</li>
+    </ul>
+    <ul class="numbers">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+
     <script src="js/main.js"></script>
   </body>
 </html>
