--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <ul id="content"></ul>
-    </div>
-
-    <button type="button" id="send">Send</button>
-    <button type="button" id="get">Get</button>
-    <button type="button" id="getAllBook">GetAllBook</button>
+    <button>Salom</button>
 
     <script src="js/main.js"></script>
   </body>
